<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/tasksFragment"
        android:icon="@drawable/ic_tasks"
        android:title="Tasks" />

    <item
        android:id="@+id/subjectsFragment"
        android:icon="@drawable/ic_subjects"
        android:title="Subjects" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="Settings" />
</menu>